--- a/elclub.html
+++ b/elclub.html
@@ -115,7 +115,7 @@
 
         <div class="text-block">
           <h3>Actualidad</h3>
-          <p>Tras la presidencia hasta el pasado 2024 de D. Fernando Carracedo, para este 2025 se han renovado los órganos directivos habiendo cogido el testigo de la anterior junta los siguientes: - tesorero D. Óscar Pérez San Juan,  técnico D. Txetxu Sánchez Lumbreras, secretario D. Jesús Alfonso, presidente D. Patxi Salvador Esparza.</p>
+          <p>Este año 2026 se ha reformado la junta, debido al fallecimiento en agosto pasado de D. Fernando Carracedo, quedando de la siguiente forma: tesorero D. Óscar Pérez San Juan, técnico D. Txetxu Sánchez Lumbreras, secretario D. Jesús Alfonso, vice-presidenta Dña. Maite Alfonso Esquiroz, presidente D. Patxi Salvador Esparza.</p>
           <p></p>
           <p>El Club cuenta con unos 25 socios, entre los cuales tenemos deportistas situados en los primeros puestos del Ranking Nacional de las distintas modalidades actuales y deportistas en activo que cumplen por encima de los 80 años, lo cual es un autentico lujo. Esta pequeña memoria de nuestro Club se podría ampliar con más detalles, lo importante es que somos un Club de Amigos deportistas que lo que pretendemos es pasarlo bien, y pegar algunos tiros.</p>
           <p> </p>
