--- a/enlaces.html
+++ b/enlaces.html
@@ -173,6 +173,7 @@
       <h1 class="page-title">Enlaces de interés</h1>
 
       <div class="link-grid">
+		  
         <a class="link-card" href="https://www.fnavarratirolimpico.com/" target="_blank">
           <img src="assets/img/web/logo-fnto.png" alt="FNTO" />
           <div class="link-title">FNTO</div>
@@ -187,6 +188,17 @@
           <img src="assets/img/web/logo-ipsc.png" alt="IPSC" />
           <div class="link-title">IPSC</div>
         </a>
+
+        <a class="link-card" href="https://www.deportenavarra.es/es/inicio" target="_blank">
+          <img src="" alt="INDAF" />
+          <div class="link-title">INDAF</div>
+        </a>
+
+        <a class="link-card" href="https://www.wirtexsports.com/" target="_blank">
+          <img src="" alt="MSSC" />
+          <div class="link-title">MSSC</div>
+        </a>		  
+		  
       </div>
     </section>
   </main>
