--- a/enlaces.html
+++ b/enlaces.html
@@ -190,12 +190,12 @@
         </a>
 
         <a class="link-card" href="https://www.deportenavarra.es/es/inicio" target="_blank">
-          <img src="" alt="INDAF" />
+          <img src="assets/img/web/logo-indaf.png" alt="INDAF" />
           <div class="link-title">INDAF</div>
         </a>
 
         <a class="link-card" href="https://www.wirtexsports.com/" target="_blank">
-          <img src="" alt="MSSC" />
+          <img src="assets/img/web/logo-mssc.png" alt="MSSC" />
           <div class="link-title">MSSC</div>
         </a>		  
 		  
